--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,125 +1,74 @@
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
-    LiteStep 0.24.7
+    LiteStep 0.24.8
     Changelog
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 
+-- CHANGES SINCE 0.24.7 --------------------------------------------------------
 
--- NOTE ------------------------------------------------------------------------
+ - New combined evaluation parser for If/ElseIf and inline $a+b$ expressions.
+   Supports string comparisons and built-in functions among other improvements.
 
- The 0.24.7 code is based on the 2002-01-03 pre-0.24.6 source. Some of the
- functionality that was added to the 0.24.6 branch after this date (mostly Indie
- LS changes) was reimplemented in 0.24.7. See below for a list of these
- functions and for what is missing.
+ - Added checks for recursively defined variables to VarExpansionEx.
 
+ - Fixed threading/reentrant crash in MessageManager.
 
--- CHANGES SINCE 0.24.6 --------------------------------------------------------
+ - Updates for Notification Icon Handler (systray service).
+   * Fixed non persistent data from always being retained.
+   * Fixed always sending NID data as new/updated when it wasn't.
+     (Fixes bogus info/balloon tips on recycle)
+   * Fixed possible internal data corruption by rouge systray modules.
+   * Fixed "dead icons" from being sent to systray modules on recycle.
+   * Added basic "shared icon" tracking.
 
- - Removed all COM.
+ - Removed !gather bang command proxy for VWM modules (all current VWM modules
+   now implement that function internally).
 
- - Cleaned up the code... this includes numerous fixes, formatting, and source 
-   beautifications.
+ - Fixed ParseCmdLine's szRcPath creation from inserting an extra backslash.
 
- - Massive improvements in StartupRunner and TrayService.  Visible items are:
-   * On NT systems, LiteStep detects if startup items have been run before or
-     not. This is the same method that Explorer uses to detect if it should
-     rerun startup items in the event that the shell crashes. Thus the
-     -nostartup switch is obsolete on NT systems.
-   * Added command line switch -startup to force running of the startup items.
-   * StartupRunner now has RunOnceEx support.
-   * TrayService rewrite enables support for the language indicator icon
-    (but not on WinXP) and fixes many other problematic icons.
+ - Much improved initialization/recycle of LSAPI internals.
 
- - Fixed XP logon delay
+ - Added support for "AppBars". (Appbars are windows that dock to the side of
+   the screen, some of which "autohide".  Typical uses are Media Player's
+   navigation bars, or Instant Messenger's contact list window. Appbars may
+   also cause the work area to be changed)
 
- - Merged LiteMAN functionallity (i.e. DDE) into the LiteStep core. It is now
-   called DDEService and loaded by default. Liteman.dll should no longer be
-   loaded.
+ - Changed bang !alert messagebox caption to "!Alert Litestep" to make apparent
+   what generated the messagebox.
 
- - Added "LSUseSystemDDE". This loads the Windows DDE server instead of the
-   DDEService. This may result in slightly larger memory usage but "proper" DDE
-   support. LSUseSystemDDE takes effect on startup only, not on !recycle.
-   Requires shdocvw.dll from IE.
+ - Fixed error handling when encountering invalid If/ElseIf syntax.
 
- - Added !HideModules and !ShowModules to hide or show all module windows.
-   !ToggleModules is also available.
+ - Now checks for ElseIf following Else directive and skips conditional block
+   if this invalid structure occurs.
 
- - If "LSAutoHideModules" is specified LS tries to automatically hide all module
-   windows if a full-screen app is detected. Once the full-screen app exits the
-   modules are redisplayed.
+ - Improved debug TRACE message output during step.rc parsing for debug builds.
 
- - LCOpen uses a separate SettingsMap for each file opened with LCOpen. This is
-   the thread-safe approach but makes it impossible for modules to use the
-   GetRC* APIs to retrieve settings from those files. For example this affects
-   Rabidvwm which can no longer read its settings directly from .box files. Put
-   the settings into step.rc instead or "include" the .box file(s) as a
-   workaround.
+ - Default all platform variables (eg. "WinNT") to "false" prior to setting
+   conditional to "true".
 
- - Added inform-sega's ShellExecute fix for .lnk files. This enables LSExecute()
-   to execute .lnk files.
+ - Added Win2003 platform variable.
 
- - Removed support for PixmapPath (use LSImageFolder instead), ThemeFile,
-   LSThemeFile, and LSColorBGR.
- 
- - Modules are loaded and unloaded asynchronously (at the same time) if
-   threaded. This should lead to faster start and recycle times if threading is
-   used. Specify a threaded module by:  LoadModule <file> threaded
+ - Fixed semicolon following ELSE or ENDIF statement from breaking parser.
 
- - All MessageBoxes (including !alert and !confirm) should now always have focus
-   and appear ontop of the active window.
- 
- - The Recovery Menu cannot be closed permanently with ALT-F4 any more.
+ - Command line !bang handler now allows running LS instance to set foreground
+   window.
 
- - Improved handling of exceptions in threaded modules.
+ - Fixed possible lockup condition on startup/recycle if there existed a non
+   responsive application on the desktop.
 
- - Improved handling of exceptions during !bang execution.
+ - Fixed !about bang command from launching concurrent AboutBox instances.
 
- - Optimized BitmapToRegion, LoadLSImage, LoadLSIcon, BitmapFromIcon.
+ - Fixed LS logo not showing in about box. Moved logo to the left.
 
- - Added new step.rc setting "LSDisableTrayService". Setting this value disables
-   the core's system tray support.
+ - The Compile date is now fetched from PE header.
 
- - LM_UN/RELOADMODULE can now un/reload modules by using the HINSTANCE of the
-   module as the wParam. Set the lParam to LMM_HINSTANCE in that case.
-   !Reloadmodule and !unloadmodule take advantage of this and should thus no
-   longer crash even if a module tries to un-/reload itself.
+ - $CompileDate$ now has the full "Compiled on" string as shown in the !about
+   box.
 
- - Removed -install and -uninstall.
+ - Now using DeferWindowPos in Show/Hide/ToggleModules bang commands.  This
+   allows for "apparent" instant showing/hiding of all module windows.
 
- - Removed !ToggleWharf and !Popup from the core.
+ - Improvements to LSAutoHideModules.
 
- - Added EnumLSData export to lsapi. This gives modules like lscp a consistent
-   interface to poll core data.
+ - Many other incremental fixes and code cleanup changes... Thanks for reading.
 
- - etc. etc.
-
-
--- INDIE LS CHANGES ADDED TO 0.24.7 --------------------------------------------
-
- - GetRCCoordinate and ParseCoordinate added to lsapi for reading coordinates
-   with negative and centered support.
-
- - Some typos in the string tables were corrected.
-
- - $windir$ is guaranteed to end with a backslash ('\').
-
- - Math evaluation in VarExpansion (can be disabled at compiletime).
-
- - Stubs in lsapi for the logging APIs (minimal logging support can be enabled
-   at compiletime) and for the Get-/SetVariable APIs.
-
- - Addition of $WinXP$, $compiledate$, and $quicklaunch$.
-
- - Removal of !ToggleWharf and !Popup from lsapi.
- 
- - c0atzin's RegisterShellHook() fix for Win9x.
-
-
--- INDIE LS CHANGES NOT ADDED TO 0.24.7 ----------------------------------------
-
- - All changes made to the recovery menu and the aboutbox.
-
- - !setvar, !emptytrashbin
-
- - system color / font variables, OS-* variables.
-
- - LSCP (including !lscp). This will have to be rewritten to work.
+=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
